# cache-friendly

./: Cargo.toml  README.md
benches/: hashmaps.rs  hashmaps_str_keys.rs  hashset_str_keys.rs
src/: lib.rs
